refactor: Return paged response instead of list of objects